force-app/main/default/objects/FPC_TiemposSLARC__c/FPC_TiemposSLARC__c.object-meta.xml
<CustomObject>
    <label>Tiempo SLA RC</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Nombre de Tiempos SLA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tiempos SLA RC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>