force-app/main/default/objects/FPC_TiemposSLARC__c/fields/EstadoSLA__c.field-meta.xml
<CustomField>
    <fullName>EstadoSLA__c</fullName>
    <label>Estado SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Validación</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Afiliación</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Devuelto</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Firma</label>
            </value>
             <value>
                <fullName>NS</fullName>
                <label>Nuevo SAC</label>
            </value>
            <value>
                <fullName>NC</fullName>
                <label>Nuevo Comercial</label>
            </value>
            <value>
                <fullName>VS</fullName>
                <label>Validación Scan</label>
            </value>
            <value>
                <fullName>PS</fullName>
                <label>Pendiente Scan</label>
            </value>
            <value>
                <fullName>PF</fullName>
                <label>Pendiente Físico</label>
            </value>
            <value>
                <fullName>VF</fullName>
                <label>Validación Físico</label>
            </value>
            <value>
                <fullName>DC</fullName>
                <label>Devolución Comercial</label>
            </value>
            <value>
                <fullName>DA</fullName>
                <label>Devolución Agencia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>