force-app/main/default/objects/FPC_TiemposSLARC__c/fields/FPC_Codigo__c.field-meta.xml
<CustomField>
    <fullName>FPC_Codigo__c</fullName>
    <label>Código</label>
    <length>3</length>
    <type>Text</type>
</CustomField>