force-app/main/default/objects/FPC_TiemposSLARC__c/fields/FPC_Estado__c.field-meta.xml
<CustomField>
    <fullName>FPC_Estado__c</fullName>
    <label>Estado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>