force-app/main/default/objects/FPC_TiemposSLARC__c/fields/FPC_Tiempo__c.field-meta.xml
<CustomField>
    <fullName>FPC_Tiempo__c</fullName>
    <label>Tiempo (Horas)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>