force-app/main/default/objects/FPC_TiemposSLARC__c/fields/PantallaRC__c.field-meta.xml
<CustomField>
    <fullName>PantallaRC__c</fullName>
    <label>Pantalla RC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_Afiliacion</valueSetName>
    </valueSet>
</CustomField>